# desc-python

./: .gitlab-ci.yml  Dockerfile  README.md  conda-lock.yml  desc-py-lock-.yml  desc-py-lock-2025-09-10.yml
ci/: test-descqa-nersc.bash
conda/lock/: environment.yml  mpi-hpc.yml  mpi-laptop.yml  pyproject.toml
conda/lock/auto/: desc-py-bleed-lock-2026-03-24.yml  desc-py-bleed-lock-2026-03-27.yml  desc-py-bleed-lock-linux-64-main-2026-03-30.yml  desc-py-bleed-lock-linux-64-main-2026-04-01.yml  desc-py-bleed-lock-linux-64-main-2026-04-03.yml  desc-py-bleed-lock-linux-64-main-2026-04-04.yml  desc-py-bleed-lock-linux-64-main-2026-04-08.yml  desc-py-bleed-lock-linux-64-main-2026-04-11.yml  desc-py-bleed-lock-linux-64-main-2026-04-13.yml  desc-py-bleed-lock-linux-64-main-2026-04-15.yml  desc-py-bleed-lock-linux-64-main-2026-04-16.yml  desc-py-bleed-lock-linux-64-main-2026-04-18.yml  desc-py-bleed-lock-linux-64-main-2026-04-22.yml  desc-py-bleed-lock-linux-64-main-2026-04-25.yml  desc-py-bleed-lock-linux-64-main-2026-04-29.yml  desc-py-bleed-lock-linux-64-main-2026-05-02.yml  desc-py-bleed-lock-linux-64-main-2026-05-06.yml  desc-py-bleed-lock-linux-64-main-2026-05-09.yml  desc-py-bleed-lock-linux-64-main-2026-05-13.yml  desc-py-bleed-lock-linux-64-main-2026-05-16.yml  desc-py-bleed-lock-linux-64-main-2026-05-20.yml  desc-py-bleed-lock-linux-64-main-2026-05-23.yml  desc-py-bleed-lock-linux-64-main-2026-05-27.yml  desc-py-bleed-lock-linux-64-main-2026-05-28.yml  desc-py-bleed-lock-linux-64-main-2026-05-30.yml  desc-py-bleed-lock-linux-64-main-2026-06-03.yml  desc-py-bleed-lock-linux-64-main-2026-06-06.yml  desc-py-bleed-lock-linux-64-main-2026-06-10.yml  desc-py-bleed-lock-linux-64-main-2026-06-13.yml  desc-py-bleed-lock-linux-64-main-2026-06-17.yml  desc-py-bleed-lock-linux-64-main-2026-07-14.yml  desc-py-bleed-lock-linux-64-main-2026-07-15.yml  desc-py-bleed-lock-linux-64-main-2026-07-18.yml  desc-py-bleed-lock-main-2026-03-25.yml  desc-py-bleed-lock-ox-64-main-2026-03-30.yml  desc-py-bleed-lock-ox-64-main-2026-04-01.yml  desc-py-bleed-lock-ox-64-main-2026-04-03.yml  (+77 more)
(+129 files in other folders)
