# pyproject.toml

[project]
name = "poetry-demo"
version = "0.1.0"
description = ""


platforms = [
    'linux-64'
]
[tool.poetry]
packages = [
    { include = "descqa" },
    { include = "delight" },
    { include = "helpers" },
    { include = "fofcatalogmatching" },
    { include = "catalogmatcher" },
    { include = "stile" },
]

[tool.poetry.dependencies]
nvidia-nccl-cu12 = "2.27.7"  # Use a version available on conda/nvidia channel
descqa = {url = "https://github.com/LSSTDESC/descqa/archive/v2.8.0.tar.gz"}
delight = {git = "git+https://github.com/LSSTDESC/Delight.git", rev = "master"}
helpers = {url = "https://bitbucket.org/yymao/helpers/get/v0.3.2.tar.gz"}
fofcatalogmatching = {url = "https://github.com/yymao/FoFCatalogMatching/archive/v0.1.0.tar.gz"}
catalogmatcher = {url = "https://github.com/LSSTDESC/CatalogMatcher/archive/master.tar.gz"}
stile = {url = "https://github.com/msimet/Stile/archive/v0.1.tar.gz"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

