# pyproject.toml

[project]
name = "poetry-demo"
version = "0.1.0"
description = ""


platforms = [
    'linux-64'
]
[tool.poetry]
packages = [
    { include = "delight" },
    { include = "descqa" },
    { include = "helpers" },
    { include = "fofcatalogmatching" },
    { include = "catalogmatcher" },
    { include = "stile" },
]

[tool.poetry.dependencies]
delight = {git = "git+https://github.com/LSSTDESC/Delight.git", rev = "master"}
descqa = {url = "https://github.com/LSSTDESC/descqa/archive/v2.8.0.tar.gz"}
helpers = {url = "https://bitbucket.org/yymao/helpers/get/v0.3.2.tar.gz"}
fofcatalogmatching = {url = "https://github.com/yymao/FoFCatalogMatching/archive/v0.1.0.tar.gz"}
catalogmatcher = {url = "https://github.com/LSSTDESC/CatalogMatcher/archive/master.tar.gz"}
stile = {url = "https://github.com/msimet/Stile/archive/v0.1.tar.gz"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

